--- a/app/src/main/res/layout/teleop_fragment.xml
+++ b/app/src/main/res/layout/teleop_fragment.xml
@@ -229,11 +229,10 @@
         android:textAppearance="?android:textAppearanceSmall"
         android:text="100"
         android:id="@+id/onehundredmissedTextView"
+        android:textSize="11sp"
         android:layout_below="@+id/highballsmissedSeekBar"
-        android:layout_toRightOf="@+id/highballsmissedSeekBar"
-        android:layout_toEndOf="@+id/highballsmissedSeekBar"
-        android:layout_marginTop="0dp"
-        android:textSize="11sp"/>
+        android:layout_toRightOf="@+id/teleopPeriodTextView"
+        android:layout_toEndOf="@+id/teleopPeriodTextView" />
 
     <SeekBar
         android:layout_width="200dp"
@@ -242,7 +241,8 @@
         android:max="10"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/highmissedTextView"
-        android:layout_alignRight="@+id/highballsmissedSeekBar" />
+        android:layout_alignRight="@+id/highballsmissedSeekBar"
+        android:indeterminate="false" />
 
     <TextView
         android:layout_width="wrap_content"
