back button long press

--- a/app/src/main/res/layout-xlarge-land/teleop_fragment.xml
+++ b/app/src/main/res/layout-xlarge-land/teleop_fragment.xml
@@ -378,7 +378,7 @@
             android:layout_centerHorizontal="true"
             android:textSize="30sp"/>
 
-        <Chronometer
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/climbChronometer"
