--- a/app/src/main/res/layout-xlarge-port/teleop_fragment.xml
+++ b/app/src/main/res/layout-xlarge-port/teleop_fragment.xml
@@ -372,7 +372,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp" />
 
-        <Chronometer
+        <TextView
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:id="@+id/climbChronometer"
