--- a/app/src/main/res/layout/teleop_fragment.xml
+++ b/app/src/main/res/layout/teleop_fragment.xml
@@ -374,7 +374,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp" />
 
-    <Chronometer
+    <TextView
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:id="@+id/climbChronometer"
