--- a/app/src/main/res/layout/activity_edit_data.xml
+++ b/app/src/main/res/layout/activity_edit_data.xml
@@ -207,5 +207,91 @@
         android:layout_below="@+id/autoLowMissedEnterText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/gearsPickedUpEnterText"
+        android:hint="Gears Picked Up"
+        android:layout_below="@+id/gearsPickedUpTV"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:text="Gears Hung"
+        android:id="@+id/gearsHungTV"
+        android:layout_below="@+id/gearsPickedUpTV"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/gearsHungEnterText"
+        android:hint="Gears Hung"
+        android:layout_below="@+id/gearsHungTV"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:text="Gears Dropped"
+        android:id="@+id/gearsDroppedTV"
+        android:layout_below="@+id/gearsHungEnterText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="?android:textAppearanceMedium"
+        android:id="@+id/gearsDroppedEnterText"
+        android:hint="Gears Dropped"
+        android:layout_below="@+id/gearsDroppedTV"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:text="High Shoot Speed"
+        android:id="@+id/highShootSpeedTV"
+        android:layout_below="@+id/gearsDroppedEnterText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/highShootSpeedEnterText"
+        android:hint="High Shoot Speed"
+        android:layout_below="@+id/highShootSpeedTV"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:text="High Shots Missed"
+        android:id="@+id/highShotsMissedTV"
+        android:layout_below="@+id/highShootSpeedEnterText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/highShotsMissedEnterText"
+        android:hint="High Shots Missed"
+        android:layout_below="@+id/highShotsMissedTV"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
