--- a/app/src/main/res/layout/activity_edit_data.xml
+++ b/app/src/main/res/layout/activity_edit_data.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -302,5 +305,92 @@
         android:layout_below="@+id/highShotsMissedEnterText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/lowShootSpeedEnterText"
+        android:hint="Low Speed Shot"
+        android:layout_below="@+id/lowShootSpeedTV"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:text="Low Shots Missed"
+        android:id="@+id/lowShotsMissedTV"
+        android:layout_below="@+id/lowShootSpeedEnterText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/lowShotsMissedEnterText"
+        android:hint="Low Shots Missed"
+        android:layout_below="@+id/lowShotsMissedTV"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:text="Hopper Intake"
+        android:id="@+id/hopperIntakeTV"
+        android:layout_below="@+id/lowShotsMissedEnterText"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/hopperIntakeEnterText"
+        android:hint="Hopper Intake"
+        android:layout_below="@+id/hopperIntakeTV"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:text="Climb Time"
+        android:id="@+id/climbTimeTV"
+        android:layout_below="@+id/hopperIntakeEnterText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/climbTimeEnterText"
+        android:hint="Climb Time"
+        android:layout_below="@+id/climbTimeTV"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:text="Climb Success"
+        android:id="@+id/climbSuccessTV"
+        android:layout_below="@+id/climbTimeEnterText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/climbSuccessEnterText"
+        android:hint="Climb Success"
+        android:layout_below="@+id/climbSuccessTV"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
+</ScrollView>
